src/main/java/com/example/test/omnivore2trendithon2025/global/error/dto/ErrorResponse.java
package com.example.test.omnivore2trendithon2025.global.error.dto;

public record ErrorResponse(
        int statusCode,
        String message
) {
}